[package]
name = "tombola"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.16.0"
avian2d = "0.3.0"
bevy_egui = "0.34.1"
midir = "0.10.1"
strum = "0.27.1"
strum_macros = "0.27.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
